fix typos in swagger
